set01/problem05_compile_errors.txt
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set01\problem05.c: In function 'compare':
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set01\problem05.c:41:9: error: 'else' without a previous 'if'
         else
         ^~~~
